# TTFY

./: CMakeLists.txt
include/: TTFY.h  TTFY_DATA_TYPES.h  TTFY_DEFINE.h  TTFY_TABLE_NAMES.h  TTFY_TableDirectory.h  TTFY_buffer.h  TTFY_glyf.h  TTFY_head.h  TTFY_hhea.h  TTFY_htmx.h  TTFY_loca.h  TTFY_maxp.h  TTFY_name.h
src/: TTFY_TableDirectory.c  TTFY_buffer.c  TTFY_glyf.c  TTFY_head.c  TTFY_hhea.c  TTFY_htmx.c  TTFY_loca.c  TTFY_maxp.c  TTFY_name.c
